Fix background on mobile devices

--- a/style.css
+++ b/style.css
@@ -32,16 +32,29 @@ body {
     text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
 }
 
+@media (max-width: 62em) {
+    html,
+    body {
+        background: #52418f;
+    }
+}
+
 /*---[ Main ]-----------------------------------------------------------------*/
 
 .site-wrapper {
     display: table;
     width: 100%;
     height: 100%;
-    
     min-height: 100%;
     -webkit-box-shadow: inset 0 0 5rem rgba(41, 8, 48, 0.4);
     box-shadow: inset 0 0 5rem rgba(41, 8, 48, 0.4);
+}
+
+@media (max-width: 62em) {
+    .site-wrapper {
+        -webkit-box-shadow: none;
+        box-shadow: none;
+    }
 }
 
 .site-wrapper-inner {
